<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/createquiz"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/createquiz" />
        <item
            android:id="@+id/myquiz"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/myquiz" />
      <!--  <item
            android:id="@+id/mark"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/MARK" /> -->

        <item
            android:id="@+id/loguot"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/logout" />
    </group>



</menu>
