<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_alignParentStart="true"
    android:layout_alignParentEnd="true">


    <TableLayout
        android:id="@+id/mytable"
        style="@style/AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_weight="90"
        android:stretchColumns="1"
        android:textColor="@color/white"
        tools:layout_editor_absoluteY="4dp">

        <TableRow android:id="@+id/tablerow">

            <TextView
                android:id="@+id/stdidtable"
                style="@style/AppTheme"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="10dip"
                android:singleLine="false"
                android:text="@string/studentid"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/stdnametable"
                style="@style/AppTheme"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="10dip"
                android:text="@string/student_name"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/stdmarktable"
                style="@style/AppTheme"
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="10dip"
                android:text="@string/MARK"
                android:textColor="@color/white" />

        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>